PNFA serialization, test fix and other